2011-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: Use old API to work around bug in
	current sel_registerTypedName().

2011-03-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSProcessInfo.m (_gnu_process_args): Use C runtime system
	functions to access command line arguments and the environment
	under Darwin/Mac OS X.

	* configure.ac: Add special case to disable fake-main by default
	on Darwin/OS X.

	* configure: Regenerated.

2011-03-17 15:02  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/NSObject.m: Correctly call C++
	  constructors / destructors for C++ 'objects' in ObjC++ ivars.

2011-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: regenerated wityh latest zone info.
	* Tests/base/NSCalendarDate: Updated to use standardised locale

2011-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Make +initialize thread safety warning optional
	(disabled using GSSilenceInitializeWarning user default) and more
	informative.

2011-03-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Padding for fractional part comes at the
	start rather than at the end.

2011-03-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m (-getObjectValue:forString:errorDescription:):
	Add implementation.

2011-03-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m (-getObjectValue:forString:range:error:):
	Added implementation.
	* Headers/NSNumberFormatter.h: Fixed a couple of typos.

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Resources/GNUmakefile
	(base-resources_RESOURCE_FILES_INSTALL_DIR): Removed.

2011-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* configure:
	* Headers/Additions/GNUstepBase:
	* Headers/Additions/GNUstepBase/Additions.h:
	* Headers/Additions/GNUstepBase/config.h.in:
	* Headers/Additions/GNUstepBase/.cvsignore:
	* Headers/Additions/GNUstepBase/CXXException.h: